--- a/tasks1234/haskell/src/TODO.txt
+++ b/tasks1234/haskell/src/TODO.txt
@@ -1,3 +1,4 @@
 добавить все литералы к if стейтмент, а не только числовые
 изменить парсер строк (пробелы)
 сделать так, чтобы переменная вида 1...a... была допустима
+списки
